--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "style-loader": "^2.0.0",
     "three": "^0.139.2"
   },
-
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.16.11",
@@ -31,6 +30,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "html-webpack-plugin": "^5.0.0-alpha.7",
+    "lil-gui": "^0.18.2",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2",
